--- a/about.scss
+++ b/about.scss
@@ -183,7 +183,7 @@ ul {
 .resume-container {
   width: 870px;
   height: 800px;
-  border: 1px solid red;
+  //   border: 1px solid red;
   grid-area: resume;
   display: flex;
   justify-content: space-between;
@@ -191,27 +191,24 @@ ul {
 
 .hikes {
   width: 420px;
-  height: 800px;
-  border: 1px solid green;
+  height: 200px;
+  border: 4px solid var(--light-color);
+  overflow: hidden;
+  border-radius: 10px;
 
   h1 {
+    margin-top: 0;
+    text-align: center;
     font-family: "Bellota Text", cursive;
     font-weight: 700;
     text-transform: uppercase;
-    font-size: 30px;
+    font-size: 50px;
+    color: var(--light-color);
+    border-bottom: 4px solid var(--light-color);
   }
-}
-
-.runs {
-  width: 420px;
-  height: 800px;
-  border: 1px solid yellow;
-
-  h1 {
-    font-family: "Bellota Text", cursive;
-    font-weight: 700;
-    text-transform: uppercase;
-    font-size: 30px;
+  .carrot-two {
+    font-size: 35px;
+    cursor: pointer;
   }
   ul {
     list-style: none;
@@ -219,6 +216,57 @@ ul {
     li {
       font-family: "Bellota Text", cursive;
       font-style: italic;
+      font-size: 17px;
+
+      .year {
+        font-size: 18px;
+        font-style: normal;
+      }
+
+      .place {
+        font-family: "Bellota Text", cursive;
+        font-weight: 700;
+        font-style: normal;
+      }
+    }
+  }
+}
+
+.runs {
+  width: 420px;
+  height: 200px;
+  border: 4px solid var(--light-color);
+  overflow: hidden;
+  border-radius: 10px;
+
+  h1 {
+    margin-top: 0;
+    text-align: center;
+    font-family: "Bellota Text", cursive;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 50px;
+    color: var(--light-color);
+    border-bottom: 4px solid var(--light-color);
+  }
+
+  .carrot {
+    font-size: 35px;
+    cursor: pointer;
+  }
+
+  ul {
+    list-style: none;
+
+    li {
+      font-family: "Bellota Text", cursive;
+      font-style: italic;
+      font-size: 17px;
+
+      .year {
+        font-size: 18px;
+        font-style: normal;
+      }
 
       .place {
         font-family: "Bellota Text", cursive;
