--- a/css/about.css
+++ b/css/about.css
@@ -176,7 +176,6 @@ ul {
 .resume-container {
   width: 870px;
   height: 800px;
-  border: 1px solid red;
   grid-area: resume;
   display: flex;
   justify-content: space-between;
@@ -184,26 +183,63 @@ ul {
 
 .hikes {
   width: 420px;
-  height: 800px;
-  border: 1px solid green;
+  height: 200px;
+  border: 4px solid var(--light-color);
+  overflow: hidden;
+  border-radius: 10px;
 }
 .hikes h1 {
+  margin-top: 0;
+  text-align: center;
   font-family: "Bellota Text", cursive;
   font-weight: 700;
   text-transform: uppercase;
-  font-size: 30px;
+  font-size: 50px;
+  color: var(--light-color);
+  border-bottom: 4px solid var(--light-color);
+}
+.hikes .carrot-two {
+  font-size: 35px;
+  cursor: pointer;
+}
+.hikes ul {
+  list-style: none;
+}
+.hikes ul li {
+  font-family: "Bellota Text", cursive;
+  font-style: italic;
+  font-size: 17px;
+}
+.hikes ul li .year {
+  font-size: 18px;
+  font-style: normal;
+}
+.hikes ul li .place {
+  font-family: "Bellota Text", cursive;
+  font-weight: 700;
+  font-style: normal;
 }
 
 .runs {
   width: 420px;
-  height: 800px;
-  border: 1px solid yellow;
+  height: 200px;
+  border: 4px solid var(--light-color);
+  overflow: hidden;
+  border-radius: 10px;
 }
 .runs h1 {
+  margin-top: 0;
+  text-align: center;
   font-family: "Bellota Text", cursive;
   font-weight: 700;
   text-transform: uppercase;
-  font-size: 30px;
+  font-size: 50px;
+  color: var(--light-color);
+  border-bottom: 4px solid var(--light-color);
+}
+.runs .carrot {
+  font-size: 35px;
+  cursor: pointer;
 }
 .runs ul {
   list-style: none;
@@ -211,6 +247,11 @@ ul {
 .runs ul li {
   font-family: "Bellota Text", cursive;
   font-style: italic;
+  font-size: 17px;
+}
+.runs ul li .year {
+  font-size: 18px;
+  font-style: normal;
 }
 .runs ul li .place {
   font-family: "Bellota Text", cursive;
