--- a/about.scss
+++ b/about.scss
@@ -1,31 +1,85 @@
 :root {
-  --light-color: rgba(223, 230, 233, 0.8);
+  --light-color: rgba(223, 230, 233, 1);
   --cap-text: "Bellota Text", cursive;
   --bold-text: "Plaster", cursive;
+  --typo-text: "Roboto Slab", serif;
   --red-color: rgba(214, 48, 49, 0.7);
   --drak-color: #2d3436;
+}
+
+html,
+body {
+  width: 100%;
+  margin: 0px;
 }
 
 body {
   background-color: #7f8c8d;
   width: 1300px;
   overflow-x: hidden;
+  margin: 0;
+}
+
+nav {
+  position: absolute;
+  top: 40px;
+  left: 30px;
+
+  a {
+    cursor: pointer;
+    font-family: var(--cap-text);
+    font-size: 25px;
+    text-decoration: none;
+    color: var(--light-color);
+  }
+}
+#star-spin {
+  font-size: 25px;
+  color: var(--light-color);
 }
 
 .typo-animation-container {
   position: absolute;
-  top: 245px;
-  left: 775px;
-  width: 560px;
-  //   border: 1px solid yellow;
+  top: 520px;
+  left: 550px;
+  width: 1100px;
+
   transform: rotate(90deg);
+  text-transform: uppercase;
   h1 {
     overflow: hidden;
     position: relative;
     font-family: "Plaster", cursive;
-    font-size: 150px;
+    font-size: 130px;
     color: #ecf0f1;
     mix-blend-mode: difference;
+    height: 200px;
+    margin: 0;
+    // border: 1px solid green;
+
+    .hide-text {
+      position: absolute;
+      z-index: 100;
+      top: 195px;
+      //   border: 1px solid red;
+    }
+  }
+}
+.typo-animation-container-two {
+  position: absolute;
+  top: 300px;
+  left: 550px;
+  width: 800px;
+  //   border: 1px solid yellow;
+  transform: rotate(90deg);
+  text-transform: uppercase;
+  z-index: 10;
+  h1 {
+    overflow: hidden;
+    position: relative;
+    font-family: "Plaster", cursive;
+    font-size: 130px;
+    color: #ecf0f1;
     height: 200px;
     margin: 0;
     // border: 1px solid green;
@@ -45,18 +99,19 @@ body {
   margin-top: 70px;
   display: grid;
   grid-template-columns: 350px 150px 350px;
-  grid-auto-rows: minmax(70px, auto);
+  grid-auto-rows: minmax(50px, auto);
   column-gap: 10px;
   row-gap: 20px;
   grid-template-areas:
+    "quote quote quote"
     "text-one img-one img-one"
     ". img-one img-one"
-    "indent indent indent"
     "img-two img-two text-two"
     "img-two img-two ."
-    "indent-two indent-two indent-two"
+    "mission mission mission"
     "resume resume resume"
-    "resume resume resume";
+    "resume resume resume"
+    "testing testing testing";
   justify-content: center;
   transform: translateX(-100px);
 }
@@ -67,7 +122,7 @@ body {
   background-image: url(/imgsBw/abadablam.jpg);
   background-size: cover;
   grid-area: img-one;
-  justify-self: end;
+  justify-self: start;
   position: relative;
 }
 
@@ -83,9 +138,101 @@ body {
   padding: 10px 5px;
 }
 
+.pic-one {
+  position: absolute;
+  top: 200px;
+  left: -220px;
+  width: 200px;
+  height: 277px;
+  background-image: url(/images/skullinetherocksLong.jpg);
+  background-size: cover;
+}
+
+.pic-one::after {
+  content: "01";
+  font-family: var(--typo-text);
+  font-size: 24px;
+  color: var(--drak-color);
+  margin-right: 10px;
+}
+
+.pic-two {
+  position: absolute;
+  top: 600px;
+  left: -230px;
+  width: 200px;
+  height: 271px;
+  background-image: url(/images/peakandSpear.jpg);
+  background-size: cover;
+}
+.pic-two::after {
+  content: "02";
+  font-family: var(--typo-text);
+  font-size: 24px;
+  color: var(--drak-color);
+  margin-right: 10px;
+}
+
+.pic-three {
+  position: absolute;
+  top: 250px;
+  right: -200px;
+  width: 220px;
+  height: 293px;
+  background-image: url(/images/middleteton.jpg);
+  background-size: cover;
+}
+.pic-four {
+  position: absolute;
+  top: 600px;
+  right: -200px;
+  width: 210px;
+  height: 294px;
+  background-image: url(/images/tashilabstatall.jpg);
+  background-size: cover;
+}
+
+.pic-three::after {
+  content: "03";
+  font-family: var(--typo-text);
+  font-size: 24px;
+  color: var(--drak-color);
+  margin-left: 10px;
+}
+.pic-four::after {
+  content: "04";
+  font-family: var(--typo-text);
+  font-size: 24px;
+  color: var(--light-color);
+  margin-left: 10px;
+}
+
+.caption-div {
+  position: absolute;
+  width: 200px;
+  top: 800px;
+  left: -230px;
+  font-family: var(--typo-text);
+  color: var(--drak-color);
+  font-size: 20px;
+  font-weight: 200;
+  text-align: left;
+}
+.caption-div-two {
+  position: absolute;
+  width: 200px;
+  top: 750px;
+  right: -200px;
+  font-family: var(--typo-text);
+  color: var(--drak-color);
+  font-size: 20px;
+  font-weight: 200;
+  text-align: left;
+}
+
 .grid-text {
   width: 350px;
-  height: 250px;
+  height: 50px;
   border-radius: 8px;
   //   background-color: var(--light-color);
 }
@@ -94,18 +241,21 @@ body {
   grid-area: text-one;
   align-self: start;
   position: relative;
+  font-family: var(--typo-text);
+  color: var(--light-color);
+  font-weight: 100;
+  font-size: 45px;
+  padding: 10px;
 
-  p {
-    font-family: var(--cap-text);
-    color: var(--light-color);
-    font-size: 45px;
-    padding: 10px;
+  #dictionary {
+    font-family: "EB Garamond", serif;
+    // text-decoration: 0.5px underline;
+    // text-underline-offset: 5px;
   }
-}
-
-.hover-score {
-  transition: 0.5s ease-in;
-  text-decoration: underline var(--red-color) wavy;
+  #out-running {
+    font-family: var(--typo-text);
+    font-weight: 400;
+  }
 }
 
 .indent {
@@ -113,28 +263,6 @@ body {
   width: 870px;
   background-color: transparent;
   grid-area: indent;
-}
-
-.marquee {
-  width: 870px;
-  height: 150px;
-  grid-area: marquee;
-  text-transform: uppercase;
-  color: #ecf0f1;
-  animation: slide 10s linear forwards;
-
-  h1 {
-    font-family: var(--bold-text);
-    margin: 0;
-    font-size: 120px;
-    white-space: nowrap;
-  }
-}
-
-@keyframes slide {
-  100% {
-    transform: translateX(-50%);
-  }
 }
 
 .placeholder-img {
@@ -147,7 +275,7 @@ body {
 }
 
 .placeholder-img::after {
-  content: "Wind spun and adrenalized on the summit of the Grand Teton, pausing for a 'proof-of-summit' photo before I bolted down with a round trip time of 4h2m.";
+  content: "Wind spun and adrenalized on the summit of the Grand Teton, pausing for a summit photo before I bolted down for a round trip time of 4h2m.";
   position: absolute;
   width: 490px;
   bottom: 0;
@@ -161,32 +289,102 @@ body {
 .grid-text-two {
   grid-area: text-two;
   align-self: end;
+  font-family: var(--typo-text);
+  color: var(--light-color);
+  font-weight: 100;
+  font-size: 45px;
+  padding: 10px;
+  text-align: left;
+
   p {
-    font-family: var(--cap-text);
-    color: var(--light-color);
-    font-size: 25px;
-    padding: 10px;
-    text-align: right;
+    font-family: var(--typo-text);
+    font-weight: 200;
   }
 }
-#text-two-subhead {
-  font-family: var(--cap-text);
+
+.grid-quote {
+  position: relative;
+  grid-area: quote;
+  margin-top: 0;
+  width: 700px;
+  height: 1030px;
+  font-family: var(--typo-text);
+  font-weight: 100;
   color: var(--light-color);
+  font-size: 30px;
+  text-align: right;
   font-size: 45px;
-  text-align: left;
-  font-size: 45px;
+  justify-self: end;
+  padding-right: 40px;
+  border-right: 2px dashed #ecf0f1;
 }
+
 ul {
   list-style: none;
 }
+//mission
+.creed-container {
+  grid-area: mission;
+  width: 870px;
+  height: 950px;
+  border-right: 2px dashed #ecf0f1;
+  text-align: right;
+  position: relative;
 
+  h1 {
+    margin-right: 20px;
+    font-family: var(--typo-text);
+    font-weight: 700;
+    font-size: 48px;
+    color: var(--light-color);
+    letter-spacing: 1px;
+  }
+
+  p {
+    margin-right: 20px;
+    font-family: "Bellota Text", cursive;
+    font-style: italic;
+    font-size: 30px;
+    color: var(--light-color);
+
+    #importance {
+      letter-spacing: 4px;
+    }
+  }
+
+  ul {
+    list-style: none;
+    margin-right: 20px;
+
+    li {
+      font-family: var(--typo-text);
+      font-weight: 100;
+      font-size: 35px;
+      color: var(--light-color);
+      margin: 20px 0;
+
+      .precept {
+        font-size: 40px;
+        font-weight: 200;
+        letter-spacing: 2px;
+      }
+    }
+  }
+}
+
+//resume
 .resume-container {
   width: 870px;
-  height: 800px;
-  //   border: 1px solid red;
+
   grid-area: resume;
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  position: relative;
+}
+
+.resume-container > * {
+  flex: 1 1 100%;
 }
 
 .hikes {
@@ -195,6 +393,8 @@ ul {
   border: 4px solid var(--light-color);
   overflow: hidden;
   border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  margin-bottom: 0;
 
   h1 {
     margin-top: 0;
@@ -216,10 +416,12 @@ ul {
     li {
       font-family: "Bellota Text", cursive;
       font-style: italic;
-      font-size: 17px;
+      font-size: 20px;
 
       .year {
-        font-size: 18px;
+        font-family: var(--typo-text);
+        font-weight: 200;
+        font-size: 22px;
         font-style: normal;
       }
 
@@ -232,12 +434,62 @@ ul {
   }
 }
 
+.hike-img-one {
+  position: absolute;
+  top: 400px;
+  right: -220px;
+  width: 200px;
+  height: 267px;
+  background-image: url(/images/parairiv.jpg);
+  background-size: cover;
+}
+.hike-img-two {
+  position: absolute;
+  top: 1000px;
+  right: -220px;
+  width: 200px;
+  height: 267px;
+  background-image: url(/images/fourteener.jpg);
+  background-size: cover;
+}
+
+.hike-img-one::after {
+  content: "05";
+  font-family: var(--typo-text);
+  font-weight: 100;
+  font-size: 24px;
+  color: var(--light-color);
+  margin-right: 10px;
+}
+.hike-img-two::after {
+  content: "06";
+  font-family: var(--typo-text);
+  font-weight: 100;
+  font-size: 24px;
+  color: var(--light-color);
+  margin-right: 10px;
+}
+
+.caption-div-three {
+  position: absolute;
+  width: 200px;
+  top: 980px;
+  right: -220px;
+  font-family: var(--typo-text);
+  color: var(--drak-color);
+  font-size: 20px;
+  font-weight: 200;
+  text-align: left;
+}
+
 .runs {
   width: 420px;
   height: 200px;
   border: 4px solid var(--light-color);
   overflow: hidden;
   border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  margin-bottom: 0;
 
   h1 {
     margin-top: 0;
@@ -261,11 +513,12 @@ ul {
     li {
       font-family: "Bellota Text", cursive;
       font-style: italic;
-      font-size: 17px;
+      font-size: 20px;
 
       .year {
-        font-size: 18px;
-        font-style: normal;
+        font-size: 22px;
+        font-family: var(--typo-text);
+        font-weight: 200;
       }
 
       .place {
@@ -280,4 +533,57 @@ ul {
 .place {
   font-family: "Bellota Text", cursive;
   font-weight: 700;
+}
+
+.footer-container {
+  height: 350px;
+  background-color: #2d3436;
+  position: fixed;
+  top: 100%;
+  transform: translate(90px);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-grow: 3;
+
+  h1 {
+    font-family: var(--typo-text);
+    font-weight: 100;
+    color: var(--light-color);
+    font-size: 40px;
+
+    a {
+      margin-left: 250px;
+      margin-top: 25px;
+      font-family: "Bellota Text", cursive;
+      font-size: 25px;
+      color: var(--light-color);
+
+      text-decoration: none;
+    }
+  }
+
+  .selfie {
+    margin-top: 20px;
+    margin-left: 100px;
+    width: 200px;
+    height: 252px;
+    background-image: url(/images/selfiesnow.jpg);
+    background-size: cover;
+    position: relative;
+    border-radius: 10px;
+  }
+
+  .selfie::after {
+    content: "All photos by Ben Dhiman";
+    width: 250px;
+
+    position: absolute;
+    bottom: -35px;
+    font-family: var(--typo-text);
+    font-weight: 200;
+    margin-left: -20px;
+    color: var(--light-color);
+    font-size: 20px;
+  }
 }
