--- a/css/racing.css
+++ b/css/racing.css
@@ -977,8 +977,8 @@ nav ul a {
 }
 .gtvo-container .gtvo-stats {
   position: absolute;
-  font-family: "Bellota Text", cursive;
-  font-style: italic;
+  font-family: "Roboto Slab", serif;
+  font-weight: 100;
   color: #ecf0f1;
   font-size: 40px;
   right: 5%;
@@ -1006,7 +1006,7 @@ nav ul a {
   position: absolute;
   top: 0;
   width: 30%;
-  height: 350px;
+  height: 360px;
   border-radius: 10px;
   background-color: rgba(223, 230, 233, 0.8);
   z-index: 3;
@@ -1022,14 +1022,13 @@ nav ul a {
   width: 90%;
   font-family: "Bellota Text", cursive;
   text-align: left;
-  font-size: 22px;
+  font-size: 20px;
 }
 
 #description {
-  font-family: "Bellota Text", cursive;
+  font-family: "Roboto Slab", serif;
   text-align: left;
-  font-size: 22px;
-  font-style: italic;
+  font-size: 18px;
 }
 
 #pre-description {
@@ -1038,6 +1037,84 @@ nav ul a {
   font-size: 20px;
   font-style: normal;
   margin-bottom: 10px;
+}
+
+.gabizos-container {
+  position: relative;
+  width: 100%;
+  height: 90vh;
+  overflow: hidden;
+}
+.gabizos-container h1 {
+  position: absolute;
+  z-index: 10;
+  top: 10px;
+  left: 100px;
+  text-transform: uppercase;
+  font-family: "Bellota Text", cursive;
+  font-style: normal;
+  font-size: 100px;
+  font-weight: 700;
+  color: #ecf0f1;
+  -webkit-text-stroke: 1px #d63031;
+}
+
+.gabizos-img {
+  position: absolute;
+  top: 60px;
+  left: 50px;
+  width: 720px;
+  height: 480px;
+  background-image: url(/imgsBw/gabizos.jpg);
+  background-size: cover;
+}
+
+.gabizos-logo {
+  position: absolute;
+  top: 390px;
+  left: 60px;
+  background-image: url(/images/Logo-Les-Gabizos.png);
+  background-size: cover;
+  width: 120px;
+  height: 130px;
+  cursor: pointer;
+}
+
+.gabizos-text-box {
+  position: absolute;
+  top: 160px;
+  right: 100px;
+  width: 500px;
+  height: 300px;
+  border-radius: 10px;
+  background-color: rgba(223, 230, 233, 0.7);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+.gabizos-text-box ul {
+  list-style: none;
+}
+.gabizos-text-box ul li {
+  width: 90%;
+  font-family: "Bellota Text", cursive;
+  font-style: italic;
+  text-align: right;
+  font-size: 20px;
+}
+.gabizos-text-box ul li:nth-child(1) {
+  padding-top: 10px;
+  width: 90%;
+  font-family: "Bellota Text", cursive;
+  font-style: normal;
+  text-align: right;
+  font-size: 25px;
+}
+.gabizos-text-box ul li:nth-child(3) {
+  width: 90%;
+  font-family: "Roboto Slab", serif;
+  font-style: normal;
+  text-align: right;
+  font-size: 18px;
+  text-align: left;
 }
 
 .canfranc-container {
@@ -1139,7 +1216,7 @@ nav ul a {
 .running-numbers {
   margin-top: 60px;
   width: 300px;
-  height: 200px;
+  height: 230px;
   border-radius: 10px;
   background-color: rgba(223, 230, 233, 0.7);
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
@@ -1166,8 +1243,8 @@ nav ul a {
 .running-numbers ul li:nth-child(2) {
   padding-top: 5px;
   width: 95%;
-  font-family: "Bellota Text", cursive;
-  font-style: italic;
+  font-family: "Roboto Slab", serif;
+  font-style: normal;
   text-align: right;
   font-size: 20px;
 }
@@ -1241,8 +1318,8 @@ h2 {
   background-image: url(/images/logotipo.canfranc.canfranc.png);
   background-size: cover;
   position: absolute;
-  top: 60%;
-  left: 70%;
+  top: 450px;
+  right: 50px;
   cursor: pointer;
 }
 
@@ -1326,10 +1403,10 @@ h2 {
 }
 .gr-textbox ul li:nth-child(4) {
   width: 90%;
-  font-family: "Bellota Text", cursive;
-  font-style: italic;
+  font-family: "Roboto Slab", serif;
+  font-style: normal;
   text-align: right;
-  font-size: 19px;
+  font-size: 17px;
   text-align: left;
 }
 
