--- a/racing.scss
+++ b/racing.scss
@@ -9,13 +9,6 @@ body {
   overflow-x: hidden;
 }
 
-// .container {
-//   width: 600%;
-//   height: 100%;
-//   display: flex;
-//   flex-wrap: nowrap;
-// }
-
 nav {
   position: absolute;
   margin-top: -3%;
@@ -452,8 +445,8 @@ $width: 7.21px;
   }
   .gtvo-stats {
     position: absolute;
-    font-family: "Bellota Text", cursive;
-    font-style: italic;
+    font-family: "Roboto Slab", serif;
+    font-weight: 100;
     color: #ecf0f1;
     font-size: 40px;
     right: 5%;
@@ -483,7 +476,7 @@ $width: 7.21px;
   position: absolute;
   top: 0;
   width: 30%;
-  height: 350px;
+  height: 360px;
   border-radius: 10px;
   background-color: rgba(223, 230, 233, 0.8);
   z-index: 3;
@@ -500,16 +493,17 @@ $width: 7.21px;
       width: 90%;
       font-family: "Bellota Text", cursive;
       text-align: left;
-      font-size: 22px;
+      font-size: 20px;
     }
   }
 }
 
 #description {
-  font-family: "Bellota Text", cursive;
+  font-family: "Roboto Slab", serif;
+
   text-align: left;
-  font-size: 22px;
-  font-style: italic;
+  font-size: 18px;
+  // font-style: italic;
 }
 
 #pre-description {
@@ -518,6 +512,91 @@ $width: 7.21px;
   font-size: 20px;
   font-style: normal;
   margin-bottom: 10px;
+}
+
+//GABIZOS SECTION
+
+.gabizos-container {
+  position: relative;
+  width: 100%;
+  height: 90vh;
+  overflow: hidden;
+
+  h1 {
+    position: absolute;
+    z-index: 10;
+    top: 10px;
+    left: 100px;
+    text-transform: uppercase;
+    font-family: "Bellota Text", cursive;
+    font-style: normal;
+    font-size: 100px;
+    font-weight: 700;
+    color: #ecf0f1;
+    -webkit-text-stroke: 1px #d63031;
+  }
+}
+
+.gabizos-img {
+  position: absolute;
+  top: 60px;
+  left: 50px;
+  width: 720px;
+  height: 480px;
+  background-image: url(/imgsBw/gabizos.jpg);
+  background-size: cover;
+}
+
+.gabizos-logo {
+  position: absolute;
+  top: 390px;
+  left: 60px;
+  background-image: url(/images/Logo-Les-Gabizos.png);
+  background-size: cover;
+  width: 120px;
+  height: 130px;
+  cursor: pointer;
+}
+
+.gabizos-text-box {
+  position: absolute;
+  top: 160px;
+  right: 100px;
+  width: 500px;
+  height: 300px;
+  border-radius: 10px;
+  background-color: rgba(223, 230, 233, 0.7);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+
+  ul {
+    list-style: none;
+
+    li {
+      width: 90%;
+      font-family: "Bellota Text", cursive;
+      font-style: italic;
+      text-align: right;
+      font-size: 20px;
+    }
+    li:nth-child(1) {
+      padding-top: 10px;
+      width: 90%;
+      font-family: "Bellota Text", cursive;
+      font-style: normal;
+      text-align: right;
+      font-size: 25px;
+    }
+    li:nth-child(3) {
+      width: 90%;
+      font-family: "Roboto Slab", serif;
+      font-style: normal;
+      text-align: right;
+      font-size: 18px;
+      text-align: left;
+    }
+  }
 }
 
 //CANFRANC SECTION
@@ -621,7 +700,7 @@ $width: 7.21px;
 .running-numbers {
   margin-top: 60px;
   width: 300px;
-  height: 200px;
+  height: 230px;
   border-radius: 10px;
   background-color: rgba(223, 230, 233, 0.7);
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
@@ -650,8 +729,8 @@ $width: 7.21px;
     li:nth-child(2) {
       padding-top: 5px;
       width: 95%;
-      font-family: "Bellota Text", cursive;
-      font-style: italic;
+      font-family: "Roboto Slab", serif;
+      font-style: normal;
       text-align: right;
       font-size: 20px;
     }
@@ -726,8 +805,8 @@ h2 {
   background-image: url(/images/logotipo.canfranc.canfranc.png);
   background-size: cover;
   position: absolute;
-  top: 60%;
-  left: 70%;
+  top: 450px;
+  right: 50px;
   cursor: pointer;
 }
 
@@ -815,10 +894,10 @@ h2 {
     }
     li:nth-child(4) {
       width: 90%;
-      font-family: "Bellota Text", cursive;
-      font-style: italic;
+      font-family: "Roboto Slab", serif;
+      font-style: normal;
       text-align: right;
-      font-size: 19px;
+      font-size: 17px;
       text-align: left;
     }
   }
