--- a/style.css
+++ b/style.css
@@ -83,3 +83,45 @@
   color: var(--color-light);
   font-size: 35px;
 }
+
+@media (max-width: 480px) {
+  body {
+    overflow: hidden;
+  }
+
+  .hero-container {
+    height: 100vh;
+  }
+
+  .hero-image {
+    background-image: url(./images/mediaQuery/redshorts1MQ480.jpg);
+  }
+  .hero-text {
+    font-size: 30px;
+    margin-left: 20px;
+    line-height: 1;
+  }
+
+  .hero-text h2 {
+    margin-top: 10px;
+    font-size: 35px;
+  }
+
+  .hero-nav {
+    width: 480px;
+    height: 200px;
+    margin-top: -100px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .hero-nav ul {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .hero-nav li {
+    margin-top: 20px;
+  }
+}
