--- a/about.scss
+++ b/about.scss
@@ -20,10 +20,6 @@ body {
   margin: 0;
 }
 
-.preload {
-  overflow: hidden;
-}
-
 //preload
 .pre-load-wrapper {
   position: fixed;
@@ -530,7 +526,7 @@ ul {
 .caption-div-three {
   position: absolute;
   width: 200px;
-  top: 980px;
+  top: 950px;
   right: -220px;
   font-family: var(--typo-text);
   color: var(--drak-color);
@@ -618,6 +614,17 @@ ul {
 
       text-decoration: none;
     }
+  }
+
+  #insta-logo {
+    position: absolute;
+    top: 125px;
+    left: 100px;
+
+    font-size: 80px;
+    color: rgba(236, 240, 241, 0.7);
+    z-index: 1000;
+    background-color: transparent;
   }
 
   .selfie {
