--- a/contact.scss
+++ b/contact.scss
@@ -99,7 +99,7 @@ nav {
   position: relative;
   top: 110px;
   left: 600px;
-  width: 500px;
+  width: 550px;
   height: 320px;
   background-color: rgba(223, 230, 233, 0.8);
   border-radius: 5px;
@@ -118,14 +118,23 @@ nav {
   #ps {
     font-weight: 100;
   }
+
+  .insta {
+    font-size: 40px;
+    color: #2d3436;
+    background-color: transparent;
+    position: absolute;
+    top: 280px;
+    left: 500px;
+  }
 }
 
 .headline {
   position: absolute;
-  top: 15px;
-  left: 800px;
+  top: 0px;
+  left: 810px;
   font-family: var(--bold-text);
-  font-size: 85px;
+  font-size: 95px;
   color: rgba(223, 230, 233, 1);
   text-transform: uppercase;
 }
@@ -184,19 +193,23 @@ nav {
   z-index: 20;
   width: 360px;
   height: 432px;
+  opacity: 1;
 }
 .pic-two:hover {
   z-index: 20;
   width: 360px;
   height: 429px;
+  opacity: 1;
 }
 .pic-three:hover {
   z-index: 20;
   width: 420px;
   height: 301px;
+  opacity: 1;
 }
 .pic-four:hover {
   z-index: 20;
   width: 286px;
   height: 448px;
+  opacity: 1;
 }
