--- a/css/contact.css
+++ b/css/contact.css
@@ -106,7 +106,7 @@ nav ul a {
   position: relative;
   top: 110px;
   left: 600px;
-  width: 500px;
+  width: 550px;
   height: 320px;
   background-color: rgba(223, 230, 233, 0.8);
   border-radius: 5px;
@@ -122,13 +122,21 @@ nav ul a {
 .textbox #ps {
   font-weight: 100;
 }
+.textbox .insta {
+  font-size: 40px;
+  color: #2d3436;
+  background-color: transparent;
+  position: absolute;
+  top: 280px;
+  left: 500px;
+}
 
 .headline {
   position: absolute;
-  top: 15px;
-  left: 800px;
+  top: 0px;
+  left: 810px;
   font-family: var(--bold-text);
-  font-size: 85px;
+  font-size: 95px;
   color: rgb(223, 230, 233);
   text-transform: uppercase;
 }
@@ -189,22 +197,26 @@ nav ul a {
   z-index: 20;
   width: 360px;
   height: 432px;
+  opacity: 1;
 }
 
 .pic-two:hover {
   z-index: 20;
   width: 360px;
   height: 429px;
+  opacity: 1;
 }
 
 .pic-three:hover {
   z-index: 20;
   width: 420px;
   height: 301px;
+  opacity: 1;
 }
 
 .pic-four:hover {
   z-index: 20;
   width: 286px;
   height: 448px;
+  opacity: 1;
 }/*# sourceMappingURL=contact.css.map */
