--- a/css/racing.css
+++ b/css/racing.css
@@ -10,6 +10,63 @@ body {
   overflow-x: hidden;
 }
 
+.pre-load-wrapper {
+  position: fixed;
+  z-index: 1001;
+  width: 110%;
+  height: 110%;
+  background-color: #2f3640;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: translate(-10px, -100px);
+}
+
+#circlePath-two {
+  stroke-dasharray: 340 !important;
+  stroke-dashoffset: 340;
+  -webkit-animation: dash 5s linear forwards infinite;
+          animation: dash 5s linear forwards infinite;
+}
+
+@-webkit-keyframes dash {
+  from {
+    stroke-dashoffset: 340;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes dash {
+  from {
+    stroke-dashoffset: 340;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+.runner {
+  position: absolute;
+  font-size: 180px;
+  color: #d63031;
+  transform: translate(5px, 5px);
+}
+
+.runner-two {
+  position: absolute;
+  font-size: 180px;
+  color: #55efc4;
+  opacity: 0.7;
+  transform: translate(-5px, -5px);
+}
+
+.runner-three {
+  position: absolute;
+  font-size: 180px;
+  color: #fdcb6e;
+}
+
 nav {
   position: absolute;
   margin-top: -3%;
