--- a/racing.scss
+++ b/racing.scss
@@ -292,7 +292,7 @@ $width: 7.21px;
     list-style: none;
 
     li {
-      width: 90%;
+      width: 100%;
       font-family: "Bellota Text", cursive;
       font-style: italic;
       text-align: right;
@@ -459,6 +459,34 @@ $width: 7.21px;
   width: 290px;
   height: 290px;
   background-image: url(/imgsBw/ridgelineBWthumb.jpg);
+  background-size: cover;
+  border-radius: 10px;
+}
+.img-thumbnail-four {
+  width: 290px;
+  height: 290px;
+  background-image: url(/images/mediaQuery/ossauBWthumb.png);
+  background-size: cover;
+  border-radius: 10px;
+}
+.img-thumbnail-five {
+  width: 290px;
+  height: 290px;
+  background-image: url(/images/mediaQuery/gabizosBWthumb.jpg);
+  background-size: cover;
+  border-radius: 10px;
+}
+.img-thumbnail-six {
+  width: 290px;
+  height: 290px;
+  background-image: url(/images/mediaQuery/mountainflankBWthumb.jpg);
+  background-size: cover;
+  border-radius: 10px;
+}
+.img-thumbnail-seven {
+  width: 290px;
+  height: 290px;
+  background-image: url(/images/mediaQuery/mafateBWthumb.jpg);
   background-size: cover;
   border-radius: 10px;
 }
