--- a/racingMediaQuery.scss
+++ b/racingMediaQuery.scss
@@ -27,6 +27,11 @@
     top: -380px;
     left: -40px;
   }
+
+  .info-packet {
+    margin-left: 10px;
+  }
+
   .gtvo-container {
     display: none;
   }
@@ -43,12 +48,13 @@
   }
 
   .mq-bottom-nav-text {
-    margin-top: 25px;
+    margin-top: 50px;
     cursor: pointer;
     text-decoration: none;
     color: #ecf0f1;
     font-family: "Bellota Text", cursive;
     font-size: 25px;
+    z-index: 2000;
   }
 }
 
