--- a/css/about.css
+++ b/css/about.css
@@ -95,6 +95,20 @@ nav a {
   color: var(--light-color);
 }
 
+.mobile-title {
+  visibility: hidden;
+  font-family: var(--bold-text);
+  color: var(--light-color);
+  font-size: 120px;
+  position: absolute;
+  z-index: 10;
+  top: 70px;
+  left: 10px;
+  text-transform: uppercase;
+  line-height: 75%;
+  border-radius: 10px;
+}
+
 .typo-animation-container {
   position: absolute;
   top: 520px;
