--- a/css/philosophyMQ.css
+++ b/css/philosophyMQ.css
@@ -17,7 +17,7 @@
 
   nav {
     top: 30px;
-    left: 250px;
+    left: 230px;
   }
 
   .mobile-title {
@@ -30,7 +30,7 @@
     grid-template-columns: 350px;
     grid-auto-rows: minmax(50px, auto);
     column-gap: 10px;
-    row-gap: 20px;
+    row-gap: 10px;
     grid-template-areas:
       "quote"
       "img-one"
@@ -61,7 +61,7 @@
     grid-area: img-one;
     position: relative;
     margin-left: 20px;
-    margin-top: 100px;
+    margin-top: 50px;
   }
 
   .abadablam::after {
@@ -83,16 +83,19 @@
     margin-left: 25px;
   }
   .placeholder-img {
-    margin-top: -100px;
+    margin-top: 0px;
     width: 350px;
     height: 380px;
     margin-left: 20px;
+    z-index: -100;
   }
 
   .placeholder-img::after {
     display: none;
   }
   .grid-text-two {
+    position: absolute;
+    top: -250px;
     font-size: 25px;
     padding: 0px;
     font-weight: 200;
@@ -101,7 +104,7 @@
   }
 
   .creed-container {
-    margin-top: -250px;
+    margin-top: -50px;
     grid-area: mission;
     width: 350px;
     height: auto;
@@ -248,5 +251,11 @@
     color: rgba(236, 240, 241, 0.7);
     z-index: 1000;
     background-color: transparent;
+  }
+  .typo-animation-container-one {
+    display: none;
+  }
+  .typo-animation-container-two {
+    display: none;
   }
 }
