--- a/css/racingMediaQuery.css
+++ b/css/racingMediaQuery.css
@@ -67,4 +67,15 @@
   .mq-bottom-nav-text {
     display: none;
   }
+}
+@media (hover: none) {
+  .bagnere-classic .winner {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  .hautacam-trails .winner-two {
+    opacity: 1;
+    visibility: visible;
+  }
 }/*# sourceMappingURL=racingMediaQuery.css.map */
