--- a/css/philosophyMQ.css
+++ b/css/philosophyMQ.css
@@ -1,11 +1,13 @@
 @media (max-width: 480px) {
   body {
     overflow-x: hidden;
+    max-width: 480px;
   }
 
   .pre-load-wrapper {
-    position: fixed;
-    transform: translateY(-400px);
+    width: 150%;
+    height: 150%;
+    transform: translate(-25%, -25%);
   }
   .whole-svg-two {
     width: 200px;
@@ -252,7 +254,7 @@
     z-index: 1000;
     background-color: transparent;
   }
-  .typo-animation-container-one {
+  .typo-animation-container {
     display: none;
   }
   .typo-animation-container-two {
