--- a/style.css
+++ b/style.css
@@ -131,6 +131,12 @@
     height: 100vh;
   }
 
+  .pre-load-wrapper {
+    width: 150%;
+    height: 150%;
+    transform: translate(-25%, -25%);
+  }
+
   .whole-svg-two {
     width: 200px;
   }
@@ -148,7 +154,8 @@
   }
   .hero-text {
     font-size: 30px;
-    margin-left: 20px;
+    margin-left: 10px;
+    margin-top: 10px;
     line-height: 1;
   }
 
