--- a/racing.scss
+++ b/racing.scss
@@ -1037,3 +1037,13 @@ h2 {
   left: -200px;
   cursor: pointer;
 }
+@media (hover: none) {
+  .bagnere-classic .winner {
+    opacity: 1;
+    visibility: visible;
+  }
+  .hautacam-trails .winner-two {
+    opacity: 1;
+    visibility: visible;
+  }
+}
