--- a/css/racingMediaQuery.css
+++ b/css/racingMediaQuery.css
@@ -1,4 +1,10 @@
 @media (max-width: 480px) {
+  .pre-load-wrapper {
+    width: 150%;
+    height: 150%;
+    transform: translate(-25%, -25%);
+  }
+
   .whole-svg-two {
     width: 200px;
   }
@@ -27,6 +33,16 @@
   .circle-text-container {
     top: -380px;
     left: -40px;
+  }
+
+  .bagnere-classic .winner {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  .hautacam-trails .winner-two {
+    opacity: 1;
+    visibility: visible;
   }
 
   .info-packet {
@@ -66,16 +82,5 @@
 
   .mq-bottom-nav-text {
     display: none;
-  }
-}
-@media (hover: none) {
-  .bagnere-classic .winner {
-    opacity: 1;
-    visibility: visible;
-  }
-
-  .hautacam-trails .winner-two {
-    opacity: 1;
-    visibility: visible;
   }
 }/*# sourceMappingURL=racingMediaQuery.css.map */
