--- a/contact.scss
+++ b/contact.scss
@@ -23,7 +23,7 @@ body {
 //preload
 .pre-load-wrapper {
   position: fixed;
-  z-index: 1001;
+  z-index: 1002;
   width: 100%;
   height: 100%;
   background-color: #2f3640;
@@ -113,6 +113,7 @@ nav {
   .align-right {
     text-align: right;
     margin-top: 10px;
+    margin-right: 20px;
   }
 
   .align-center {
@@ -204,7 +205,7 @@ nav {
 .textbox::after {
   content: "";
   position: absolute;
-  z-index: 10001;
+  z-index: 10;
   top: 100px;
   left: 20px;
   width: 100%;
