--- a/css/contact.css
+++ b/css/contact.css
@@ -22,7 +22,7 @@ body {
 
 .pre-load-wrapper {
   position: fixed;
-  z-index: 1001;
+  z-index: 1002;
   width: 100%;
   height: 100%;
   background-color: #2f3640;
@@ -120,6 +120,7 @@ nav ul a {
 .textbox .align-right {
   text-align: right;
   margin-top: 10px;
+  margin-right: 20px;
 }
 .textbox .align-center {
   margin-top: 50px;
@@ -200,7 +201,7 @@ nav ul a {
 .textbox::after {
   content: "";
   position: absolute;
-  z-index: 10001;
+  z-index: 10;
   top: 100px;
   left: 20px;
   width: 100%;
