--- a/contact.scss
+++ b/contact.scss
@@ -111,9 +111,9 @@ nav {
     text-align: left;
   }
   .align-right {
-    text-align: right;
+    text-align: center;
     margin-top: 10px;
-    margin-right: 20px;
+    margin-right: 0px;
   }
 
   .align-center {
