--- a/style.css
+++ b/style.css
@@ -188,14 +188,15 @@
 
 @media (max-width: 480px) {
   body {
-    overflow: hidden;
     height: 100vh;
+    overflow-x: hidden;
+    max-width: 480px;
   }
 
   .pre-load-wrapper {
     width: 150%;
     height: 150%;
-    transform: translate(-25%, -25%);
+    transform: translate(-18%, -15%);
   }
 
   .whole-svg-two {
@@ -212,6 +213,7 @@
 
   .hero-image {
     background-image: url(./images/mediaQuery/redshorts1MQ480.jpg);
+    width: 100%;
   }
   .hero-text {
     font-size: 30px;
@@ -226,9 +228,9 @@
   }
 
   .hero-nav {
-    width: 480px;
-    height: 200px;
-    margin-top: -575px;
+    width: 300px;
+    height: 250px;
+    margin-top: -200px;
     margin-left: 10px;
     margin-right: 10px;
   }
@@ -244,6 +246,7 @@
   }
 
   .marquee-container {
+    display: none;
     position: absolute;
     left: 0px;
     top: 210px;
