--- a/css/contactMQ.css
+++ b/css/contactMQ.css
@@ -5,6 +5,7 @@
 }
 @media (max-width: 480px) {
   .pre-load-wrapper {
+    display: none;
     width: 150%;
     height: 150%;
     transform: translate(-25%, -50%);
