--- a/racingMediaQuery.scss
+++ b/racingMediaQuery.scss
@@ -42,6 +42,10 @@
     opacity: 1;
     visibility: visible;
   }
+  .patou-skyrace .winner-three {
+    opacity: 1;
+    visibility: visible;
+  }
 
   .info-packet {
     margin-left: 10px;
