--- a/css/racingMediaQuery.css
+++ b/css/racingMediaQuery.css
@@ -46,6 +46,11 @@
     visibility: visible;
   }
 
+  .patou-skyrace .winner-three {
+    opacity: 1;
+    visibility: visible;
+  }
+
   .info-packet {
     margin-left: 10px;
   }
