--- a/RacingMF.scss
+++ b/RacingMF.scss
@@ -225,7 +225,7 @@ li {
 .instagram-icon {
   font-size: 2.5em;
   color: var(--color-red);
-  -webkit-text-stroke: 0.5px black;
+  -webkit-text-stroke: 0.5px #f6e58d;
 }
 
 .sup {
