--- a/css/home.css
+++ b/css/home.css
@@ -29,6 +29,54 @@ body {
   position: relative;
 }
 
+.bars-9 {
+  width: 45px;
+  aspect-ratio: 1;
+  --c: conic-gradient(from -90deg, var(--color-white) 90deg, #0000 0);
+  background: var(--c), var(--c);
+  background-size: 40% 40%;
+  -webkit-animation: b9 1s infinite alternate;
+          animation: b9 1s infinite alternate;
+}
+
+.bars-wrap {
+  height: 45px;
+}
+
+.preload-wrapper {
+  position: fixed;
+  z-index: 1000;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(132deg, rgb(127, 140, 141) 32%, rgb(214, 48, 49) 100%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@-webkit-keyframes b9 {
+  0%, 10% {
+    background-position: 0 0, 0 33.3333333333%;
+  }
+  50% {
+    background-position: 0 0, 33.3333333333% 33.3333333333%;
+  }
+  90%, 100% {
+    background-position: 0 0, 33.3333333333% 0;
+  }
+}
+
+@keyframes b9 {
+  0%, 10% {
+    background-position: 0 0, 0 33.3333333333%;
+  }
+  50% {
+    background-position: 0 0, 33.3333333333% 33.3333333333%;
+  }
+  90%, 100% {
+    background-position: 0 0, 33.3333333333% 0;
+  }
+}
 img {
   max-width: 100%;
 }
