--- a/css/RacingMF.css
+++ b/css/RacingMF.css
@@ -128,10 +128,12 @@ li {
   max-width: 400px;
   margin-top: 3rem;
   margin-bottom: 2rem;
+  transform: translate(-300px);
 }
 
 .typography-container {
   margin: 2em 0;
+  transform: translate(300px);
 }
 
 .bigorre-tiger {
